--- a/sass/_tours.scss
+++ b/sass/_tours.scss
@@ -242,7 +242,7 @@
     }
   }
 
-  @include respond(tab-portrait) {
+  @media only screen and (max-width: 56em), only screen and (hover: none) {
     &-card {
       border-radius: 3px;
       height: auto;
